--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "firebase": "^9.14.0"
+  },
+  "devDependencies": {
+    "webpack": "^5.75.0",
+    "webpack-cli": "^4.10.0"
   }
 }
